--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/nunito": "^4.5.0",
+    "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
     "next": "12.0.3",
