add MQTT package to frontend and change icon

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,4 @@
 GOOGLE_MAP_API=AIzaSyCEZCvWnU_InmbblKjmrKSnejtJJYG3t9Q
+BROKER_USERNAME=admin
+BROKER_PASSWORD=admin
+BROKER_URI=ws://distributed-broker.herokuapp.com
