--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
+    "mqtt-react-hooks": "^2.0.3",
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
