--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
+    "react-big-calendar": "^0.38.1",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.44.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.4",
     "@types/google-map-react": "^2.1.3",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/react-big-calendar": "^0.36.2",
+    "@types/react-calendar": "^3.4.3",
+    "@types/react-datepicker": "^4.3.2",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.4",
     "husky": "^7.0.4",
