--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
-    "react-big-calendar": "^0.38.1",
+    "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.44.0"
