Extend login booking and gateway
Co-authord-by: Klara Svensson <klarasve@student.chalmers.se>
Co-authored-by: robinhan <robinhan@student.chalmers.se>
Co-authored-by: johanaxe <johanaxe@student.chalmers.se>
Co-authored-by: simonar <simonar@student.chalmers.se>
Co-authored-by: jidarv <jidarv@student.chalmers.se>
Co-authored-by: asiymo <asiymo@student.chalmers.se>

to account for the actual state of the user, and bookings e

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,17 @@
       "@types/*": ["public"],
       "@styles/*": ["styles/*"],
       "@styles": ["styles"],
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["lib/*"],
+      "@store/*": ["store/*"],
+      "@store": ["store/"]
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/Login.tsx.old"
+  ],
   "exclude": ["node_modules"]
 }
