--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/nunito": "^4.5.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
     "google-map-react": "^2.1.10",
@@ -24,6 +25,8 @@
     "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "redux-store": "^0.0.0",
     "sass": "^1.44.0"
   },
   "devDependencies": {
