--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0",
     "redux-store": "^0.0.0",
     "sass": "^1.44.0"
   },
